# arkcompiler_taihe_ffi_gen

./: .clang-format  .coveragerc  .gitattributes  .gitignore  AGENTS.md  BUILD.gn  CMakeLists.txt  CODEOWNERS  MANIFEST.in  OAT.xml  README.md  README_zh.md  bundle.json  pyproject.toml  setup.py
compiler/: .coveragerc  .pyre_configuration  Compiler.py  Meta.py  README.md  Taihe.g4  ast.py  ast_generation.py  autotest.sh  build.py  code_generation.py  compilation.py  exceptions.py  generate-grammar  hatch_build.py  main.py  meta.py  pyproject.toml  run-test  semantic_analysis.py
compiler/taihe/: __init__.py  __main__.py  ast_generation.py  code_generation.py  compilation.py  driver.py  exceptions.py  semantic_analysis.py
compiler/taihe/cli/: compiler.py  tryit.py
compiler/taihe/codegen/: __init__.py  abi_generator.py  ani_generator.py  c_impl_generator.py  cpp_generator.py  cpp_impl_generator.py  cpp_proj_generator.py  cpp_user_generator.py  generator.py  kn_bridge_generator.py  mangle.py  napi_generator.py  sts_generator.py  (+1 more)
compiler/tests/: test_mangler.py  test_new_semantic_error.py  test_resources.py  test_semantic_error.py  test_semantic_error_old.py
cookbook/: CMakeLists.txt  README.md  readme.md
cookbook/arraybuffer/: CMakeLists.txt  README.md  readme.md
cookbook/arrbuffer/: CMakeLists.txt  readme.md
cookbook/async/: CMakeLists.txt  README.md  readme.md
cookbook/basic_abilities/: CMakeLists.txt  README.md  readme.md
cookbook/bigint/: CMakeLists.txt  README.md
cookbook/binding/: CMakeLists.txt  README.md  readme.md
cookbook/callback/: CMakeLists.txt  README.md  readme.md
cookbook/callback_compare/: CMakeLists.txt  README.md
cookbook/class/: CMakeLists.txt  README.md
cookbook/class_extend/: CMakeLists.txt  README.md  compile_flags.txt
cookbook/deprecated_overload/: CMakeLists.txt  README.md  readme.md
cookbook/enum_union/: CMakeLists.txt  README.md
cookbook/essential/: README.md
cookbook/export_default/: CMakeLists.txt  README.md
cookbook/external_obj/: CMakeLists.txt  README.md  readme.md
cookbook/external_obj_extend/: CMakeLists.txt  README.md
cookbook/hello_ani/: CMakeLists.txt
cookbook/hello_world/: CMakeLists.txt  README.md  readme.md
cookbook/import/: CMakeLists.txt  README.md
cookbook/inherit/: CMakeLists.txt  README.md
cookbook/inheritance/: CMakeLists.txt
cookbook/inject/: readme.md
cookbook/interface/: CMakeLists.txt  README.md  readme.md
cookbook/javalike_overload/: CMakeLists.txt  README.md
cookbook/multiple_inherit/: CMakeLists.txt  README.md
cookbook/namespace/: CMakeLists.txt  README.md
cookbook/new_on_off/: CMakeLists.txt  README.md
cookbook/new_overload/: CMakeLists.txt  README.md
cookbook/null_undefined/: CMakeLists.txt  README.md
cookbook/on_off/: CMakeLists.txt  README.md
cookbook/optional/: CMakeLists.txt  README.md
cookbook/overload/: CMakeLists.txt  readme.md
cookbook/override/: CMakeLists.txt  README.md  readme.md
cookbook/polymorphism/: CMakeLists.txt  README.md
cookbook/property/: CMakeLists.txt  README.md
cookbook/quick_ref/: README.md
cookbook/rename_example/: CMakeLists.txt  README.md
cookbook/reversed/: CMakeLists.txt  README.md
cookbook/struct_extends/: CMakeLists.txt  README.md
cookbook/struct_tuple/: CMakeLists.txt  README.md
cookbook/taihe_cpp/: README.md
cookbook/typedarray/: CMakeLists.txt  README.md
cookbook/union_embed/: CMakeLists.txt
cookbook/unwrap_obj/: CMakeLists.txt  README.md
runtime/: CMakeLists.txt
runtime/Tstring/: c_Tstring.c  c_Tstring.h  common.h
runtime/include/: ani_runtime.hpp
runtime/src/: callback.c  napi_runtime.cpp  object.c  object.cpp  runtime.cpp  runtime_ani.cpp  runtime_napi.cpp  string.c  string.cpp
runtime/test/: CMakeLists.txt  CMakelist.txt  array_test.cpp  string_test.cpp
test/: CMakeLists.txt  autotest.sh
test/ani_array/: CMakeLists.txt
test/ani_arraybuffer/: CMakeLists.txt
test/ani_async/: CMakeLists.txt
test/ani_async_types/: CMakeLists.txt
test/ani_basetype/: CMakeLists.txt
test/ani_bigint/: CMakeLists.txt
test/ani_bundle/: CMakeLists.txt
test/ani_bundlemanager/: CMakeLists.txt
test/ani_callback/: CMakeLists.txt
test/ani_class_extends/: CMakeLists.txt
test/ani_common_string/: CMakeLists.txt
test/ani_compare/: CMakeLists.txt
test/ani_consistency/: CMakeLists.txt
test/ani_containers/: CMakeLists.txt
test/ani_enum/: CMakeLists.txt
test/ani_error/: CMakeLists.txt
test/ani_export_default/: CMakeLists.txt
test/ani_finalization/: CMakeLists.txt
test/ani_fixedarray/: CMakeLists.txt
test/ani_function/: CMakeLists.txt
test/ani_graphics3d/: CMakeLists.txt
test/ani_huks/: CMakeLists.txt
test/ani_iface/: CMakeLists.txt
test/ani_import/: CMakeLists.txt
test/ani_inject/: CMakeLists.txt
test/ani_javalike_overload/: CMakeLists.txt
test/ani_keep_name/: CMakeLists.txt
test/ani_maythrow/: CMakeLists.txt
test/ani_namespace/: CMakeLists.txt
test/ani_new_async/: CMakeLists.txt
test/ani_on_off/: CMakeLists.txt
test/ani_opaque/: CMakeLists.txt
test/ani_optional/: CMakeLists.txt
test/ani_overload/: CMakeLists.txt
test/ani_polymorphism/: CMakeLists.txt
test/ani_primitives/: CMakeLists.txt
test/ani_record/: CMakeLists.txt
test/ani_rename/: CMakeLists.txt
test/ani_session/: CMakeLists.txt
test/ani_static/: CMakeLists.txt
test/ani_string/: CMakeLists.txt
test/ani_struct/: CMakeLists.txt
test/ani_struct_extend/: CMakeLists.txt
test/ani_test/: CMakeLists.txt
test/ani_thread/: CMakeLists.txt
test/ani_tp_cookies/: CMakeLists.txt
test/ani_tp_ui/: CMakeLists.txt
test/ani_tuple/: CMakeLists.txt
test/ani_typed_array/: CMakeLists.txt
test/ani_typedarray/: CMakeLists.txt
test/ani_union/: CMakeLists.txt
test/cmake_test/: CMakeLists.txt
test/compile_ani_lib/: CMakeLists.txt
test/compile_cpp_lib/: CMakeLists.txt
test/integer/: .gn  BUILD.gn  build.sh  integer.js
test/napi/: build  build_ts_test  integer.d.ts  integer.impl.cpp.1  integer.napi.cpp  napi.convert.hpp  napi.ts  rgb.ts  string.d.ts  tsconfig.json
test/rgb/: CMakeLists.txt
(+1048 files in other folders)
